Fixed styling and other issues fixed container issue to have it at 90% fixed merch so no text overflow fixed social page, removed twitter section

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,11 @@
 @import 'utility';
+ .container{
+      @media screen and (min-width: 1000px){
+        max-width: 90%;
+      }
+  }
+
+
 html{
   overflow-x: hidden;
   box-sizing: border-box;
